# Qt-Theme-Studio

./: .cursorrules  .flake8  .gitignore  .pre-commit-config-mvp.yaml  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT_RULES.md  INSTALL.md  LICENSE  README.md  RELEASE_NOTES.md  UNSAVED_CHANGES_FIX.md  ci_report.json  ci_report_test.json  debug_menu_actions.py  fix_code_quality.py  integrated_quality_report.json  launch_theme_studio.py  main.py  pre-release-report.json  pyproject.toml  pytest.ini  qt-theme-studio.spec  qt_theme_studio_main.py  quality_report.json  quality_test_report.json  run_basic_tests.py  run_integration_tests.py  setup_dev_environment.bat  setup_dev_environment.sh  tall PySide6  test-results.xml  test_help_system.py  test_integration.py  test_qt_adapter_basic.py  test_results.json  test_results_fixed.json  test_theme.json  tox.ini  version_info.txt
.github/workflows/: ci.yml  main-ci.yml  mvp-ci.yml  quality-gate.yml  release.yml  status-check.yml  test.yml  theme-quality-check.yml
.kiro/: project.json
.kiro/performance/: config.json
.kiro/settings/: workspace.json
.kiro/specs/qt-theme-studio/: design.md  tasks.md
.kiro/specs/workflow-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: ci-cd.md  debug.md  integration.md  tech.md
.kiro/workflow/: config.yml
.kiro_archive/specs/qt-theme-studio/: design.md  requirements.md  tasks.md
.kiro_archive/steering/: ci-cd.md  integration.md  product.md  structure.md  tech.md
docs/: DOUBLE_EXECUTION_FIX.md  FEATURE_SPECIFICATIONS.md  FUTURE_ROADMAP.md  IMPLEMENTATION_GUIDE.md  INSTALL.md  REFACTORING_PLAN_REPOSITORY_SEPARATION_ja.md  RELEASE_NOTES.md  THEME_LOADING_SYNC_IMPLEMENTATION.md  UNSAVED_CHANGES_FIX.md  WORKFLOW_INTEGRATION_GUIDE.md  WORKFLOW_TROUBLESHOOTING.md  dialog_focus_fix.md  doc_update_report.md  markdown_validation_report.md  memory_profiling.md  theme_preview_enhancement.md  v0.2.0-ROADMAP.md
docs/testing/: DEVELOPER_GUIDE.md  README.md  TEST_CASES.md
examples/: .gitkeep  sample_theme.json  サンプルテーマ.json
qt_theme_studio/: __init__.py  cli.py  error_handler.py  exceptions.py  logger.py  logging_utils.py  main.py
qt_theme_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qt_theme_studio/adapters/: __init__.py  qt_adapter.py  theme_adapter.py
qt_theme_studio/config/: __init__.py  defaults.py  persistence.py  settings.py
qt_theme_studio/controllers/: __init__.py  theme_controller.py
qt_theme_studio/generators/: theme_generator.py
qt_theme_studio/resources/: __init__.py
qt_theme_studio/resources/docs/: user_manual.html
qt_theme_studio/resources/icons/: .gitkeep
qt_theme_studio/resources/styles/: .gitkeep
qt_theme_studio/resources/templates/: .gitkeep
qt_theme_studio/resources/translations/: qt_theme_studio_ja.ts
qt_theme_studio/services/: __init__.py  export_service.py  import_service.py  quality_service.py  test_api.py  theme_service.py  validation_service.py
qt_theme_studio/utilities/: __init__.py  accessibility_manager.py  color_analyzer.py  color_improver.py  i18n_manager.py  japanese_file_handler.py
qt_theme_studio/views/: __init__.py  main_window.py  preview.py  theme_editor.py  theme_gallery.py  zebra_editor.py
qt_theme_studio/views/dialogs/: __init__.py  help_dialog.py
scripts/: .gitkeep  build_release.py  changelog_generator.py  check_print_statements.py  config_manager.py  coverage_manager.py  dependency_checker.py  dev_setup.py  doc_generator.py  doc_update_checker.py  error_reporter.py  fix_all_remaining.py  fix_all_syntax.py  fix_code_quality.py  fix_complete_syntax.py  fix_final_syntax.py  fix_fullwidth_chars.py  fix_fullwidth_colons.py  fix_hex_colors.py  fix_imports.py  fix_major_issues.py  fix_remaining_dicts.py  fix_remaining_issues.py  fix_syntax_errors.py  fix_type_annotations.py  gui_responsiveness_monitor.py  gui_responsiveness_visualizer.py  log_manager.py  markdown_validator.py  memory_profiler.py  performance_config.py  performance_monitor.py  pre_commit_setup.py  pre_release_check.py  print_statement_manager.py  python_compatibility.py  qt_detector.py  quality_check.py  quality_dashboard.py  replace_prints.py  (+5 more)
tests/: .gitkeep  README.md  __init__.py  conftest.py  test_accessibility_features.py  test_complete_workflow.py  test_config.py  test_config_integration.py  test_error_handler.py  test_exceptions.py  test_export_service.py  test_i18n_accessibility.py  test_import_service.py  test_integration_suite.py  test_logger.py  test_main_window.py  test_preview_integration.py  test_qt_adapter.py  test_theme_adapter.py  test_theme_controller.py  test_theme_editor.py  test_theme_gallery.py  test_theme_save.py  test_theme_service.py  test_validation_service.py
tests/fixtures/: __init__.py  mock_objects.py  test_theme.json  theme_data.py
tests/integration/: __init__.py  test_complete_workflow.py
tests/unit/: __init__.py  test_basic.py  test_cli.py  test_logger.py  test_main.py  test_main_window.py  test_preview.py  test_qt_adapter.py  test_theme_adapter.py  test_theme_adapter_disabled.py  test_theme_generator.py
themes/import/: theme_settings.json
